# digital-asset-rpc-infrastructure

./: .gitignore  Api.Dockerfile  Builder.Dockerfile  Cargo.toml  Ingest.Dockerfile  Load.Dockerfile  Migrator.Dockerfile  Proxy.Dockerfile  README.md  build-all.sh  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: build-api.yml  test.yml
backfill/src/worker/: tree.rs
blockbuster/src/programs/token_account/: mod.rs
blockbuster/src/programs/token_extensions/: extension.rs  mod.rs
bubblegum/: Cargo.toml
bubblegum-backfill/src/worker/: tree.rs
bubblegum/src/: lib.rs  purge_err_txs.rs  rollback_err_txs.rs  tree.rs  verify.rs
bubblegum/src/backfill/: gap.rs
bubblegum/src/backfill/worker/: mod.rs  program_transformer.rs  transaction.rs  tree.rs
core/src/: db.rs  metadata_json.rs  solana_rpc.rs
das_api/: Cargo.toml
das_api/src/: builder.rs  config.rs  error.rs  feature_flag.rs  main.rs  validation.rs
das_api/src/api/: api_impl.rs  mod.rs
digital_asset_types/: Cargo.toml
digital_asset_types/src/dao/: full_asset.rs  mod.rs
digital_asset_types/src/dao/extensions/: asset.rs  asset_data.rs  token_accounts.rs
digital_asset_types/src/dao/scopes/: asset.rs  token.rs
digital_asset_types/src/dapi/: assets_by_authority.rs  assets_by_creator.rs  assets_by_group.rs  assets_by_owner.rs  change_logs.rs  get_asset.rs  mod.rs  search_assets.rs  signatures_for_asset.rs  transactions_by_asset.rs
digital_asset_types/src/dapi/common/: asset.rs
digital_asset_types/src/rpc/: asset.rs  filter.rs  mod.rs  options.rs  response.rs  transform.rs
digital_asset_types/tests/: common.rs  get_asset_by_id.rs  get_assets_by_authority.rs  get_assets_by_creator.rs  get_assets_by_group.rs  json_parsing.rs
digital_asset_types/tests/data/: infinite_fungi.json  mad_lad.json
grpc-ingest/: .gitignore  Cargo.toml  README.md  config-grpc2redis.yml  config-ingester.example.yml  config-ingester.yml  config-monitor.yml
grpc-ingest/src/: config.rs  grpc.rs  ingester.rs  main.rs  monitor.rs  prom.rs  redis.rs  tracing.rs
integration_tests/tests/integration_tests/: account_update_tests.rs  main.rs  ops_purge.rs  regular_nft_tests.rs  search_assets.rs  show_collection_metadata_option_tests.rs  show_fungible_flag_tests.rs  test_show_zero_balance_filter.rs  token_accounts_tests.rs
integration_tests/tests/integration_tests/snapshots/: integration_tests__account_update_tests__account_updates-metadata-updated.snap  integration_tests__account_update_tests__account_updates-token-updated.snap  integration_tests__account_update_tests__account_updates-with-all-updates.snap  integration_tests__account_update_tests__account_updates.snap  integration_tests__cnft_tests__asset_decompress.snap  integration_tests__general_scenario_tests__asset_parsing.snap  integration_tests__general_scenario_tests__creators_reordering.snap  integration_tests__regular_nft_tests__reg_get_asset.snap  integration_tests__regular_nft_tests__reg_get_asset_batch-2-and-a-missing-1.snap  integration_tests__regular_nft_tests__reg_get_asset_batch-only-2-different-2.snap  integration_tests__regular_nft_tests__reg_get_asset_batch-only-2.snap  integration_tests__regular_nft_tests__reg_get_asset_by_group.snap  integration_tests__regular_nft_tests__reg_get_assets_by_creator.snap  (+31 more)
metadata_json/: Cargo.toml
metadata_json/src/: worker.rs
metadata_json/src/cmds/: backfill.rs  ingest.rs
metadata_json/src/stream/: mod.rs  receiver.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230508_142103_add_offchain_reindex.rs  m20230510_222758_reindex_index.rs  m20230510_224316_cl_audit_table.rs  m20230525_115717_cl_audit_table.rs  m20230613_114817_add_name_symbol_to_asset_data.rs  m20231208_103949_create_tree_transactions_table.rs  m20240718_161232_change_asset_supply_to_numeric.rs  m20241104_093312_add_metadata_json_fetch_heuristics_columns.rs  m20250422_102715_add_slot_table.rs
migration/src/model/: table.rs
nft_ingester/: Cargo.toml
nft_ingester/src/: account_updates.rs  backfiller.rs  config.rs  main.rs  metrics.rs  transaction_notifications.rs
nft_ingester/src/error/: mod.rs
nft_ingester/src/program_transformers/: mod.rs
nft_ingester/src/tasks/: mod.rs
ops/: Cargo.toml  README.md
ops/src/: main.rs
ops/src/account/: cmd.rs  nft.rs  program.rs  single.rs
ops/src/bubblegum/: backfiller.rs  cmd.rs  mod.rs  rollback_err_txs.rs  verify.rs
ops/src/metadata/: backfiller.rs
ops/src/purge/: cmd.rs  errored_txs_purger.rs  mod.rs  purge.rs  purger.rs
program_transformers/src/: asset_upserts.rs  lib.rs
program_transformers/src/bubblegum/: db.rs  mod.rs
program_transformers/src/mpl_core_program/: mod.rs  v1_asset.rs
program_transformers/src/token/: mod.rs
program_transformers/src/token_extensions/: mod.rs
program_transformers/src/token_metadata/: master_edition.rs  mod.rs  v1_asset.rs
tests/: Cargo.toml
tests/acc_forwarder/: Cargo.toml  README.md  test.scenario
tests/acc_forwarder/src/: main.rs
tests/bgtask_creator/: Cargo.toml
tests/bgtask_creator/src/: main.rs
tests/load_generation/: Cargo.toml
tests/pel_helper/: Cargo.toml
tests/pel_helper/src/: main.rs
tests/show-tree/: Cargo.toml
tests/show-tree/src/: main.rs
tests/tree-status/: Cargo.toml
tests/tree-status/src/: main.rs  parsing.sh
tests/txn_forwarder/: Cargo.toml
tests/txn_forwarder/src/: lib.rs  main.rs
tools/acc_forwarder/: Cargo.toml  output.txt
tools/acc_forwarder/src/: main.rs
tools/bgtask_creator/: Cargo.toml  README.md
tools/bgtask_creator/src/: main.rs
tools/load_generation/: Cargo.toml
tools/pel_helper/: README.md
tools/repair-name/: Cargo.toml  README.md
tools/repair-name/src/: account_updates.rs  lib.rs  main.rs  transaction_notifications.rs
tools/tree-status/: Cargo.toml  README.md
tools/tree-status/src/: main.rs
tools/txn_forwarder/: Cargo.toml  README.md  retry.sh
tools/txn_forwarder/src/: lib.rs  main.rs  utils.rs
tree_backfiller/: Cargo.toml
tree_backfiller/src/: backfiller.rs  db.rs  main.rs  metrics.rs  queue.rs  rpc.rs  tree.rs
(+70 files in other folders)
