[workspace]
members = [
  "digital_asset_types",
  "metaplex-rpc-proxy",
  "nft_ingester",
  "tools/acc_forwarder",
  "tools/bgtask_creator",
  "tools/load_generation",
  "tools/tree-status",
  "tools/txn_forwarder",
]
exclude = [
  "das_api",
  "migration",
]

[patch.crates-io]
# solana-account-decoder = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.15-block-cache" }
# solana-client = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.15-block-cache" }
# solana-program = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.15-block-cache" }
# solana-sdk = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.15-block-cache" }
# solana-transaction-status = { git = "https://github.com/rpcpool/solana-public.git", tag = "v1.16.15-block-cache" }
blockbuster = { git = "https://github.com/rpcpool/blockbuster", rev = "b19fd3f33315fa9c2f3bcd20e9deddf3ae6e2472" }

[profile.release]
lto = true
codegen-units = 1
