[package]
name = "das_api"
version = "0.7.1"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.56"
bs58 = "0.4.0"
cadence = "0.29.0"
cadence-macros = "0.29.0"
digital_asset_types = { path = "../digital_asset_types", features = ["json_types", "sql_types"] }
figment = { version = "0.10.6", features = ["env"] }
hyper = "0.14.23"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
jsonrpsee-core = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
metrics = "0.20.1"
open-rpc-derive = "0.0.4"
open-rpc-schema = "0.0.4"
schemars = { version = "0.8.6", features = ["derive"] }
sea-orm = { version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = "1.0.137"
serde_json = "1.0.81"
solana-sdk = "~1.14.14"
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "postgres", "uuid", "offline", "json"] }
thiserror = "1.0.31"
tokio = "1.23.0"
tokio-postgres = "0.7.7"
tower-http = { version = "0.3.5", features = ["full"] }
tower = { version="0.4.13", features = ["full"] }
tracing = "0.1.35"

[patch.crates-io]
anchor-lang = { git = "https://github.com/metaplex-foundation/anchor" }
blockbuster = { git = "https://github.com/metaplex-foundation/blockbuster", branch = "1.14" }
mpl-bubblegum = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "update-deps" }
mpl-candy-guard = { git = "https://github.com/metaplex-foundation/mpl-candy-guard", branch = "update-deps" }
mpl-candy-machine-core = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "update-deps" }
mpl-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex-program-library", branch = "update-deps" }
