[package]
name = "load_generation"
version = "0.7.12+solana.1.16.15"
edition = "2021"
publish = false

[dependencies]
fake = "2.5.0"
mpl-token-metadata = { version = "=1.8.4", features = ["no-entrypoint"] }
rand = "0.8.5"
solana-client = "=1.16.15"
solana-program = "=1.16.15"
solana-sdk = "=1.16.15"
spl-associated-token-account = "1.1.1"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
tokio = { version ="1.25.0", features = ["macros", "rt-multi-thread"] }
